<resources>
    <string name="app_name">Self</string>
    <string name="title_text">Self.Gratitude.Journal</string>
    <string name="grateful_text">What are you grateful for today?</string>
    <string name="get_started_text">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="Login_button">Login</string>
    <string name="or_text">Or</string>
    <string name="Create_button">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="post_title_hint">Title</string>
    <string name="post_description">Your Thoughts...</string>
    <string name="post_button_text">Save</string>
    <string name="menu_title">Add Thoughts</string>
    <string name="signout">Signout</string>
</resources>